--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
   ],
   "autoload" : {
     "psr-4" : {
-      "TheSlimCollective\\Helper\\" : "src"
+      "TheSlimCollective\\" : "src"
     }
   },
   "require": {
-    "slim/slim": "^3.0"
+    "slim/slim": "^3.0",
+    "monolog/monolog": "1.17.2"
   }
 }
